--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 <body>
 {% include header.html %}
+{% include navigation.html %}
 <div class="main-content">
 {{ content }}
 </div>
