docs: few more bits

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,4 +1,5 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="main.css">
+<title>{% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
