--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
 <meta charset="utf-8">
+<link rel="shortcut icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" href="main.css">
 <title>{% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
