docs: some tweaks

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,1 +1,8 @@
-footer
+<footer class="nav-footer wrap">
+	<div class="nav-refs">
+		<a href="https://github.com/larshp/abapGit">
+			<span class="mega-octicon octicon-mark-github"></span>
+		</a>
+	</div>
+<footer>
+
