--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,3 +1,5 @@
-<div id="header">
-<img src="img/logo.svg" height="50"><span class="page_title"> &#x25BA; Documentation</span>
+<div class="page-head">
+	<div class="wrap">
+		<a href="/"><img class="head-logo" src="img/logo.svg" height="40" alt="abapGit"></a><span class="head-title">abapGit documentation</span>
+	</div>
 </div>
