--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,7 @@
 {% include head.html %}
 <body>
 {% include header.html %}
-<div class="container">
+<div class="container wrap">
   <div class="nav">
   {% include navigation.html %}
   </div>
