--- a/docs/main.css
+++ b/docs/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial,Helvetica,sans-serif;
-  background:  #E8E8E8;
+  background:  #F8F8F8;
+  margin: auto;
 }
 
 a, a:visited {
@@ -13,10 +14,16 @@ a:hover, a:active {
   text-decoration: underline;
 }
 
+h1, h2, h3 {
+  margin: 10px 0;
+  font-family: inherit;
+  font-weight: bold;
+  color: inherit;
+}
+
 .container {
-  width: 1000px;
-  padding:          0.5em 1em;
-  background-color: #f2f2f2;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .container:after {
@@ -28,17 +35,54 @@ a:hover, a:active {
 .nav {
   float: left;
   width: 300px;
+  margin: 10px 0;
 }
 
 .content {
   float: right;
   width: 100%;
-  max-width: 700px;
+  max-width: 650px;
 }
 
-.page_title {
+.content img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.page-head {
+  position: relative;
+  width: 100%;
+  background-color: #E8E8E8;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.head-title {
   font-weight: bold;
   font-size: 22pt;
   color: #bbb;
   padding-left: 0.4em;
+  position: absolute;
+  bottom: 12px;
+}
+
+.wrap {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+footer.nav-footer {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.nav-refs {
+  text-align: center;
+}
+
+.nav-refs a {
+  color: #808080;
 }
