--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="page-head">
 	<div class="wrap">
-		<a href="/"><img class="head-logo" src="img/logo.svg" height="40" alt="abapGit"></a><span class="head-title">abapGit documentation</span>
+		<a href="index.html"><img class="head-logo" src="img/logo.svg" height="40" alt="abapGit"></a><span class="head-title">abapGit documentation</span>
 	</div>
 </div>
