#1018 docs: remove repeating abapGit, add meta tags

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -4,4 +4,6 @@
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.min.css">
 <title>{% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<meta name="description" content="{% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }} - Home{% endif %}" />
+<meta name="keywords" content="abapGit,abapGit documentation" />
 </head>
