Docs: Fix "Back to User Docs" (#4573)
* Move to img

* Move to img

* Fix "back to docs"

--- a/docs/_layouts/development.html
+++ b/docs/_layouts/development.html
@@ -14,7 +14,7 @@
   {% endif %}
   {% endfor %}
   </ul>
-  <p><a href="{{ site.github.repository_url }}">Back to User Docs</a></p>
+  <p><a href="/">Back to User Docs</a></p>
   </div>
 
   <div class="content">
