Docs: Add "Remote Settings" (#5008)
* Docs: Add "Remote Settings"

* Update ref-dot-abapgit.md

* Delete repo_settings_remote.png

* Add files via upload

* Update link

* Update link

* Add "Repo Settings" to navigation

* Update and rename ref-dot-abapgit.md to settings-dot-abapgit.md

* Update settings-dot-abapgit.md

* Create settings-local.md

* Create settings-remote.md

* Update settings-local.md

* Update and rename other-background-mode.md to settings-background-mode.md

* Update settings-background-mode.md

* Update and rename ref-settings-stats.md to settings-stats.md

* Update zcl_abapgit_gui_page_sett_remo.clas.abap

* Update zcl_abapgit_gui_page_sett_locl.clas.abap

* Update zcl_abapgit_gui_page_sett_bckg.clas.abap

* Update zcl_abapgit_gui_page_sett_info.clas.abap

* Update zcl_abapgit_gui_page_sett_repo.clas.abap

* Update zcl_abapgit_gui_page_sett_bckg.clas.abap

* Update zcl_abapgit_gui_page_sett_info.clas.abap

* Update zcl_abapgit_gui_page_sett_locl.clas.abap

* Update zcl_abapgit_gui_page_sett_remo.clas.abap

* Update zcl_abapgit_gui_page_sett_repo.clas.abap

Co-authored-by: Lars Hvam <larshp@hotmail.com>

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -39,6 +39,16 @@
     {% endfor %}
 </ul>
 
+<h3>Repo Settings</h3>
+<ul>
+    {% assign pages = site.pages | sort: 'order' %}
+    {% for doc in pages %}
+      {% if doc.category == "repo settings" %}
+        <li><a href=".{{ doc.url }}">{{ doc.title }}</a></li>
+      {% endif %}
+    {% endfor %}
+</ul>
+
 <h3>Reference</h3>
 <ul>
     {% assign pages = site.pages | sort: 'order' %}
