--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="nav-footer wrap">
 <div class="nav-refs">
 <a href="https://github.com/abapGit/abapGit">
-{% octicon mark-github height:32 %}
+octicon-mark-github
 </a>
 </div>
 </footer>
