--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: "72",Arial,Helvetica,sans-serif;
   background:  #F8F8F8;
   margin: auto;
   font-size: 12pt;
