--- a/docs/_layouts/development.html
+++ b/docs/_layouts/development.html
@@ -5,7 +5,7 @@
 {% include header.html %}
 <div class="container wrap">
   <div class="nav nav-print">
-  {% include navigation.html %}
+  {% include navigation-dev.html %}
   </div>
   <div class="content">
   <h1>{{ page.title }}</h1>
