--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -11,6 +11,7 @@ div.highlight {
   border: 1px solid rgba(0, 0, 0, 0.05);
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.7);
+  font-size: smaller;
 }
 
 pre.highlight {
@@ -43,6 +44,16 @@ h1, h2, h3 {
   color: inherit;
 }
 
+table {
+  background-color: #ffffff;
+  border: #dddddd 1px solid;
+  border-radius: 3px;
+}
+
+th {
+  background-color: #edf2f9;
+}
+
 .container {
   padding-top: 1em;
   padding-bottom: 1em;
@@ -70,7 +81,7 @@ h1, h2, h3 {
 .content {
   float: right;
   width: 100%;
-  max-width: 650px;
+  max-width: 750px;
 }
 
 .content img {
@@ -96,7 +107,7 @@ h1, h2, h3 {
 }
 
 .wrap {
-  max-width: 960px;
+  max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
